--- a/styles/index.css
+++ b/styles/index.css
@@ -2,3 +2,11 @@ img{
     height:100px;
     width:150px;
 }
+.cities{
+    height:300px;
+    width:300px;
+}
+.socialmedia{
+    height:20px;
+    width:22px;
+}
