--- a/styles/list.css
+++ b/styles/list.css
@@ -2,3 +2,15 @@ img{
     height:100px;
     width:150px;
 }
+.socialmedia{
+    height:20px;
+    width:22px;
+}
+.hotel{
+    height:100vh;
+    width:75vw;
+}
+.map{
+    height:75vh;
+    width:75vw;
+}
