--- a/styles/payment.css
+++ b/styles/payment.css
@@ -2,3 +2,11 @@ img{
     height:100px;
     width:150px;
 }
+.socialmedia{
+    height:20px;
+    width:22px;
+}
+.hotel{
+    height:100vh;
+    width:75vw;
+}
