--- a/styles/detail.css
+++ b/styles/detail.css
@@ -7,6 +7,18 @@ img{
     width:22px;
 }
 .hotel{
+    height:500px;
+    width:500px;
+}
+body{
     height:100vh;
-    width:75vw;
+    width:100vw;
+}
+div.container{
+    height:100vh;
+    width:100vw;
+}
+#logo{
+    height:60px;
+    width:60px;
 }
