--- a/styles/detail.css
+++ b/styles/detail.css
@@ -22,3 +22,22 @@ div.container{
     height:60px;
     width:60px;
 }
+body{
+    margin: 0;
+    background-color: #e0e0e0;
+}
+header{
+    background-color: rosybrown;
+}
+footer{
+    background-color: rosybrown;
+}
+img.hotel{
+    margin: 2% 4% 0% 4%;
+}
+form{
+    margin: 0 4% 1% 4%;
+}
+#details{
+    margin:1% 4% 2% 4%;
+}
