--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,7 @@ img{
 body{
     height:100vh;
     width:100vw;
+    background-color:#e0e0e0;
 }
 div.container{
     height:100vh;
@@ -21,4 +22,33 @@ div.container{
 #logo{
     height:60px;
     width:60px;
+}
+header{
+    background-color: rosybrown;
+}
+footer{
+    background-color: rosybrown;
+}
+div#searchbox{
+    height:380px;
+    background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+body{
+    background-color: #e0e0e0;
+}
+
+div#cityimg{
+justify-content: center;
+margin-left:15%;
+margin-right: 15%;
+}
+a img.cities{
+    padding:4%;
+}
+img.cities{
+    padding:4%;
+    border-radius: 25%;
 }
