--- a/styles/list.css
+++ b/styles/list.css
@@ -17,6 +17,8 @@ img{
 body{
     height:100vh;
     width:100vw;
+    margin:0px;
+    background-color: #e0e0e0;
 }
 div.container{
     height:100vh;
@@ -25,4 +27,15 @@ div.container{
 #logo{
     height:60px;
     width:60px;
+}
+header{
+    background-color: rosybrown;
+}
+footer{
+    background-color: rosybrown;
+}
+div.htl{
+    margin:2%;
+    width:40%;
+    background-color: rgb(132,136,139);
 }
