--- a/styles/detail.css
+++ b/styles/detail.css
@@ -23,14 +23,34 @@ div.container{
     width:60px;
 }
 body{
-    margin: 0;
     background-color: #e0e0e0;
+    margin: 0px;
+    font-family:  'Ubuntu', sans-serif;
+    overflow:auto;
+    width:100vw;
 }
 header{
+    /* margin-top: 0%; */
     background-color: rosybrown;
+    position: fixed;
+    width:100%;
+    z-index:1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    top:0;
 }
-footer{
-    background-color: rosybrown;
+.normallink{
+    text-decoration: none;
+    color:black;
+}
+#login{
+    margin-right:2%;
+}
+div.content{
+    margin-top:5%; 
+    width:100%;
+    height:100%;
 }
 img.hotel{
     margin: 2% 4% 0% 4%;
@@ -40,4 +60,26 @@ form{
 }
 #details{
     margin:1% 4% 2% 4%;
+}
+footer{
+    background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.7%;
+    bottom: 0;
+    left:0;
+    box-sizing: border-box;
+    /* margin-top: 2%; */
+}
+div#social{
+    margin-right:2%;
+    /* margin:0.5%; */
+}
+#pvtltd{
+    font-size: 10px;
+    transform: translate(0, 100%);
 }
