--- a/styles/index.css
+++ b/styles/index.css
@@ -2,53 +2,108 @@ img{
     height:100px;
     width:150px;
 }
-.cities{
-    height:150px;
-    width:150px;
-}
+
 .socialmedia{
     height:20px;
     width:22px;
+    vertical-align: middle;
 }
 body{
-    height:100vh;
-    width:100vw;
-    background-color:#e0e0e0;
+    background-color: #e0e0e0;
+    margin: 0px;
+    font-family:  'Ubuntu', sans-serif;
+    overflow: auto;
 }
-div.container{
-    height:100vh;
-    width:100vw;
-}
+
 #logo{
     height:60px;
     width:60px;
 }
+#login{
+    margin-right:2%;
+}
+.normallink{
+    text-decoration: none;
+    color:black;
+}
 header{
     background-color: rosybrown;
+    position: fixed;
+    width:100%;
+    z-index:1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 footer{
     background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.7%;
+    bottom: 0;
+    box-sizing: border-box;
 }
-div#searchbox{
-    height:380px;
+div#social{
+    margin-right:2%;
+    /* margin:0.5%; */
+}
+#pvtltd{
+    font-size: 10px;
+    transform: translate(0, 100%);
+}
+#backgroundimg{
     background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
-    background-size: cover;
+    height: 420px;
+    position: relative;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
-body{
-    background-color: #e0e0e0;
+#searchbox{
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
 }
 
 div#cityimg{
-justify-content: center;
-margin-left:15%;
-margin-right: 15%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* margin: 4%; */
+    margin-left:15%;
+    margin-right: 15%;
+    display: flex;
+    padding: 4% 0%;
+    
 }
-a img.cities{
-    padding:4%;
+
+.citiesdiv{
+    position: relative;
 }
-img.cities{
-    padding:4%;
+
+img.cityimg{
+    height: 150px;
+    width: 150px;
     border-radius: 25%;
+}
+
+#city_inputtext{
+    border: 1px solid transparent;
+    background-color: #f1f1f1;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 12px;
+    width: 100%;
+}
+
+#view_more{
+    display: flex;
+    justify-content: center;
+    margin-bottom:5%;
 }
