--- a/styles/payment.css
+++ b/styles/payment.css
@@ -11,10 +11,11 @@ img{
     width:500px;
 }
 body{
-    height:100vh;
-    width:100vw;
-    margin: 0;
     background-color: #e0e0e0;
+    margin: 0px;
+    font-family:  'Ubuntu', sans-serif;
+    overflow:auto;
+    width:100vw;
 }
 div.container{
     height:100vh;
@@ -24,11 +25,46 @@ div.container{
     height:60px;
     width:60px;
 }
+#login{
+    margin-right:2%;
+}
+.normallink{
+    text-decoration: none;
+    color:black;
+}
 header{
     background-color: rosybrown;
+    position: fixed;
+    width:100%;
+    z-index:1;
+    top:0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+div.content{
+    margin-top:7%; 
+   
 }
 footer{
     background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.7%;
+    bottom: 0;
+    box-sizing: border-box;
+}
+div#social{
+    margin-right:2%;
+    /* margin:0.5%; */
+}
+#pvtltd{
+    font-size: 10px;
+    transform: translate(0, 100%);
 }
 #hoteldetail{
     background-color: rgb(132,136,139);
@@ -44,4 +80,13 @@ footer{
     border: 1px solid black;
     padding: 1% 2% 1% 2%;
     border-radius: 5px;
+}
+#paynow-link{
+    display: block; 
+    padding-bottom: 5%;
+   
+}
+.normal-link{
+    text-decoration: none;
+    color:black;
 }
