--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,9 @@ body{
     font-family:  'Ubuntu', sans-serif;
     overflow: auto;
 }
-
+#logo-div{
+    margin-left:1%;
+}
 #logo{
     height:60px;
     width:60px;
@@ -35,6 +37,11 @@ header{
     align-items: center;
     justify-content: space-between;
 }
+.content{
+    display: flex;
+    flex-direction: column;
+}
+
 footer{
     background-color: rosybrown;
     position: fixed;
@@ -53,7 +60,6 @@ div#social{
 }
 #pvtltd{
     font-size: 10px;
-    transform: translate(0, 100%);
 }
 #backgroundimg{
     background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
@@ -76,8 +82,6 @@ div#cityimg{
     justify-content: space-evenly;
     align-items: center;
     /* margin: 4%; */
-    margin-left:15%;
-    margin-right: 15%;
     display: flex;
     padding: 4% 0%;
     
@@ -85,12 +89,37 @@ div#cityimg{
 
 .citiesdiv{
     position: relative;
+    box-shadow:0;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.city-name_overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    color: #f1f1f1;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    text-align: center;
+    border-radius: 25%;
+}
+.citiesdiv:hover .city-name_overlay{
+    opacity:1;
+}
+
+.city-name_overlay span{
+    position: relative;
+    top:45%;
+    /* transform: translate(0,-50%); */
 }
 
 img.cityimg{
     height: 150px;
     width: 150px;
     border-radius: 25%;
+    box-shadow: 10px 10px 10px grey;
 }
 
 #city_inputtext{
@@ -100,6 +129,7 @@ img.cityimg{
     font-size: 16px;
     border-radius: 12px;
     width: 100%;
+    outline:none;
 }
 
 #view_more{
