--- a/styles/list.css
+++ b/styles/list.css
@@ -21,10 +21,14 @@ body{
     overflow: auto;
     width:100vw;
 }
-/* div.container{
-    height:100vh;
-    width:100vw;
-} */
+div.content{
+    display: flex;
+    flex-direction: column;
+    margin:2%;
+}
+#logo-div{
+    margin-left:1%;
+}
 #logo{
     height:60px;
     width:60px;
@@ -81,16 +85,19 @@ div#social{
 }
 #pvtltd{
     font-size: 10px;
-    transform: translate(0, 100%);
+    /* transform: translate(0, 100%); */
 }
-
-
 div.htl{
-    margin:1% 5% 4% 5%;
+    display: flex;
+    margin:2% 5% 4% 5%;
     width:40%;
-    background-color: rgb(132,136,139);
+    background-color: lightgrey;
 }
 .no-underline{
     text-decoration: none;
     color:black;
+}
+div.hotel-detail{
+    margin-left: 4%;
+    width:100%;
 }
